fixed stretched cc image

--- a/src/app/item-page/simple/field-components/specific-field/cc-license/item-page-cc-license-field.component.scss
+++ b/src/app/item-page/simple/field-components/specific-field/cc-license/item-page-cc-license-field.component.scss
@@ -44,7 +44,7 @@
         
         // Style the license image
         .cc-image {
-          max-height: 32px;
+        //   max-height: auto;
           transition: opacity 0.2s ease;
           
           &:hover {
